mysql-db.yml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-database
  labels:
    name: mysql-database
spec:
  containers:
  - name: mysql-database
    image: mysql:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 3306
