cat_svc_lb.yml
apiVersion: v1
kind: Service
metadata:
  name: cat-service-svc
spec:
  selector:
    app: catalogue-service-app
  ports:
  - port: 80
    targetPort: 8081
  type: LoadBalancer
