catalogue-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue-service-app
  labels:
    app: catalogue-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogue-service-app
  template:
    metadata:
      labels:
        app: catalogue-service-app
    spec:
      containers:
        - name: catalogue-service-app
          image: jappa22/catalogue-service:0.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: catalogue-service-svc
spec:
  selector:
    app: catalogue-service-app
  ports:
  - port: 80
    targetPort: 8081
