cloudgateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-gateway-app
  labels:
    app: cloud-gateway-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-gateway-app
  template:
    metadata:
      labels:
        app: cloud-gateway-app
    spec:
      containers:
        - name: cloud-gateway-app
          image: jappa22/cloud-gateway-service:0.0.1-SNAPSHOT
          ports:
            - containerPort: 9191

---

apiVersion: v1
kind: Service
metadata:
  name: cloud-gateway-svc
spec:
  type: LoadBalancer
  selector:
    app: inventory-service-app
  ports:
  - port: 80
    targetPort: 9191
