config-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server-app
  labels:
    app: config-server-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server-app
  template:
    metadata:
      labels:
        app: config-server-app
    spec:
      containers:
        - name: config-server-app
          image: jappa22/cloud-config-service:0.0.1
          ports:
            - containerPort: 9296

---

apiVersion: v1
kind: Service
metadata:
  name: config-server-svc
spec:
  selector:
    app: inventory-service-app
  ports:
  - port: 80
    targetPort: 9296
