inv_svc_lb.yml
apiVersion: v1
kind: Service
metadata:
  name: inv-service-svc
spec:
  selector:
    app: inventory-service-app
  ports:
  - port: 80
    targetPort: 8082
  type: LoadBalancer
