inventory-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service-app
  labels:
    app: inventory-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service-app
  template:
    metadata:
      labels:
        app: inventory-service-app
    spec:
      containers:
        - name: inventory-service-app
          image: gmazurecontainerregistry.azurecr.io/image17march/inventory-service:1.0.3
          imagePullPolicy: Always
          ports:
            - containerPort: 8082

---

apiVersion: v1
kind: Service
metadata:
  name: inventory-service-svc
spec:
  selector:
    app: inventory-service-app
  ports:
  - port: 80
    targetPort: 8082
