prod_svc_lb.yml
apiVersion: v1
kind: Service
metadata:
  name: prod-service-svc
spec:
  selector:
    app: productsearch-service-app
  ports:
  - port: 80
    targetPort: 8083
  type: LoadBalancer
