service-registry.yml


apiVersion: v1
kind: Service
metadata:
  name: eureka
  labels:
    app: eureka
spec:
  clusterIP: None
  selector:
    app: eureka
  ports:
  - port: 8761
    name: eureka

---


apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eureka
spec:
  selector:
    matchLabels:
      app: eureka
  serviceName: "eureka"
  replicas: 1
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
      - name: eureka
        image: gmazurecontainerregistry.azurecr.io/image/service-registry:0.0.3
        ports:
        - containerPort: 8761
---

apiVersion: v1
kind: Service
metadata:
  name: eureka-lb
  labels: 
     app: eureka
spec:
  selector:
    app: eureka
  type: NodePort
  ports:
  - port: 80
    targetPort: 8761
