service-registry_lb.yml
apiVersion: v1
kind: Service
metadata:
  name: service-reg-svc
spec:
  selector:
    app: eureka
  ports:
  - port: 80
    targetPort: 8761
  type: LoadBalancer
