ingress_controller_cat_svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cat-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 20.204.216.52
    http:
      paths:
      - path: /catalogue
        pathType: Prefix
        backend:
          service:
            name: cat-service-svc
            port: 
              number: 80
